ONTAPDOC-2345: removing bugzilla references

--- a/hu_ol_64.adoc
+++ b/hu_ol_64.adoc
@@ -112,12 +112,11 @@ NOTE: To configure Oracle Linux 6.4 Red Hat Enterprise Kernel (RHCK), use the li
 
 The Oracle Linux 6.4 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=713555[713555^] | QLogic adapter resets are seen on OL6.4 and OL5.9 with UEK2 on controller faults such as takeover/giveback, and reboot | QLogic adapter resets are seen on OL6.4 hosts with UEK2 (kernel-uek-2.6.39-400.17.1.el6uek) or OL5.9 hosts with UEK2 (kernel-uek-2.6.39 400.17.1.el5uek) when controller faults happen (such as takeover, giveback, and reboots). These resets are intermittent. When these adapter resets happen, a prolonged I/O outage (sometimes, more than 10 minutes) might occur until the adapter resets succeed and the paths' status are updated by dm-multipath.
 
  In /var/log/messages, messages similar to the following are seen when this bug
@@ -127,7 +126,6 @@ The Oracle Linux 6.4 with ONTAP release has the following known issues:
  This is observed with the kernel version:
  On OL6.4: kernel-uek-2.6.39-400.17.1.el6uek
  On OL5.9: kernel-uek-2.6.39-400.17.1.el5uek
-| link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=13999[13999^]
 | link:htthttps://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=715217[715217^] | 	Delay in path recovery on OL6.4 or OL5.9 hosts with UEK2 may result in delayed I/O resumption on controller or fabric faults | When a controller fault (storage failover or giveback, reboots and so on) or a fabric fault (FC port disable or enable) occurs with I/O on Oracle Linux 6.4 or Oracle Linux 5.9 hosts with UEK2 Kernel, the path recovery by DM-Multipath takes a long time (4mins. to 10 mins).
 Sometimes, during the paths recovering to active state, the following lpfc driver errors are also seen:
  kernel: sd 0:0:8:3: [sdlt]  Result: hostbyte=DID_ERROR driverbyte=DRIVER_OK
@@ -143,7 +141,6 @@ Sometimes, during the paths recovering to active state, the following lpfc drive
  device-mapper-1.02.77-9.el5
  device-mapper-multipath-0.4.9-64.0.1.el5
  kernel-uek-2.6.39-400.17.1.el5uek
-| link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=14001[14001^]
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=709911[709911^] | DM Multipath on OL6.4 & OL5.9 iSCSI with UEK2 kernel takes long time to update LUN path status after storage faults |  On systems running Oracle Linux 6 Update4 and Oracle Linux 5 Update9 iSCSI with Unbreakable Enterprise Kernel Release 2 (UEK2), a problem has been seen during storage fault events where DM Multipath (DMMP) takes around 15 minutes to update the path status of Device Mapper (DM) devices (LUNs).
 If you run the "multipath -ll" command during this interval, the path status is shown as "failed ready running" for that DM device (LUN). The path status is eventually updated as "active ready running."
 This issue is seen with following version:
@@ -156,7 +153,6 @@ This issue is seen with following version:
  UEK2 Kernel: 2.6.39-400.17.1.el5uek
  Multipath: device-mapper-multipath-0.4.9-64.0.1.el5.x86_64
  iSCSI: iscsi-initiator-utils-6.2.0.872-16.0.1.el5.x86_64
-| link:http://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=13984[13984^]
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=739909[739909^] | The SG_IO ioctl system call fails on dm-multipath devices after an FC fault on OL6.x and OL5.x hosts with UEK2 | A problem is seen on Oracle Linux 6.x hosts with UEK2 kernel and Oracle Linux 5.x hosts with UEK2 kernel. The sg_* commands on a multipath device fail with EAGAIN error code (errno) after a fabric fault that makes all the paths in the active path group go down. This problem is seen only when there is no I/O occurring to the multipath devices.
  The following is an example:
 
@@ -178,8 +174,9 @@ This issue is seen with following version:
  OL5.9 versions:
  kernel-uek-2.6.39-400.17.1.el5uek
  device-mapper-multipath-0.4.9-64.0.1.el5
-| link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=14082[14082^]
+
 |===
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_64.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.4.
 
+// 2024 SEP 2, ONTAPDOC-2345
