--- a/hu_rhel_77.adoc
+++ b/hu_rhel_77.adoc
@@ -126,14 +126,14 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 The RHEL 7.7 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
-| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host. | When you set the 'disable_changed_wwids' multipath configuration parameter to YES, it disables access to the path device in the event of a WWID change. Multipath will disable access to the path device until the WWID of the path is restored to the WWID of the multipath device. To learn more, see  link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^]. | N/A
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1258856[1258856^] | Remote ports transit to a blocked state on RHEL7U7 with Emulex LPe16002 16GB FC during storage failover operations | Remote ports might transit to a blocked state on a RHEL 7.7 host with a LPe16002 16GB FC adapter during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1743667[1743667^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1261474[1261474^] | Remote ports transit to blocked state on RHEL7U7 with Emulex LPe32002 32GB FC | Remote ports might transit to a blocked state on a RHEL 7.7 host with LPe32002 32GB FC adapter during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online". Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1745995[1745995^]
+| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host. | When you set the 'disable_changed_wwids' multipath configuration parameter to YES, it disables access to the path device in the event of a WWID change. Multipath will disable access to the path device until the WWID of the path is restored to the WWID of the multipath device. To learn more, see  link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^]. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1258856[1258856^] | Remote ports transit to a blocked state on RHEL7U7 with Emulex LPe16002 16GB FC during storage failover operations | Remote ports might transit to a blocked state on a RHEL 7.7 host with a LPe16002 16GB FC adapter during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1261474[1261474^] | Remote ports transit to blocked state on RHEL7U7 with Emulex LPe32002 32GB FC | Remote ports might transit to a blocked state on a RHEL 7.7 host with LPe32002 32GB FC adapter during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online". Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. 
 |===
 
+// 2024 SEP 2, ONTAPDOC-2345
