--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -501,18 +501,17 @@ NSID       UUID                                   Size
 
 The NVMe-oF host configuration for OL 8.7 with ONTAP release has the following known issues:
 
-[options="header", cols="20, 20, 50, 20]
+[options="header", cols="20,40,40]
 |===
-|NetApp Bug ID	|Title	|Description	|Bugzilla ID
+|NetApp Bug ID	|Title	|Description
 |1517321
 
 |Oracle Linux 8.7 NVMe-oF Hosts create duplicate Persistent Discovery Controllers
 
 |On OL 8.7 NVMe-oF hosts, Persistent Discovery Controllers (PDCs) are created by passing the `-p` option to the `nvme discover` command. For a given initiator-target combination, each execution of the `nvme discover` command is expected to create one PDC. However, beginning with OL 8.x, NVMe-oF hosts create duplicate PDCs. This wastes resources on both the host and the target.
-|https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
+
 |===
 
-
+// 2024 SEP 2, ONTAPDOC-2345
 // BURT-1579925 22-Aug-2023
-
 // JIRA-1289 20-Sep-2023
