--- a/hu_rhel_66.adoc
+++ b/hu_rhel_66.adoc
@@ -127,13 +127,14 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 The RHEL 6.6 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=863878[863878^] | Kernel crash occurs with RHEL 6U6 host during storage failures | You might observe kernel crash on RHEL 6U6 host during storage/fabric. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1158363[1158363^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=852674[1076584^] | IO stall up to 300 sec seen with QLogic 16G FC (QLE2672) host during storage failures in RHEL 6U4 |You might observe an IO stall up to 300 sec on QLogic 16G FC (QLE2672) host during storage/fabric failures. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1135962[1135962^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=795684[795684^] | RHEL6 U5 multipathd incorrectly group multipath maps during MoD and storage failover fault operations |You might observe an incorrect path grouping on LUNs during LUN move on demand operation along with storage faults. During LUN move operation multipath path priorities will change and multipath is unable to reloads the device table due to device failure caused by storage fault. This leads to incorrect path grouping. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1151020[1151020^]
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=863878[863878^] | Kernel crash occurs with RHEL 6U6 host during storage failures | You might observe kernel crash on RHEL 6U6 host during storage/fabric. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=852674[1076584^] | IO stall up to 300 sec seen with QLogic 16G FC (QLE2672) host during storage failures in RHEL 6U4 |You might observe an IO stall up to 300 sec on QLogic 16G FC (QLE2672) host during storage/fabric failures. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=795684[795684^] | RHEL6 U5 multipathd incorrectly group multipath maps during MoD and storage failover fault operations |You might observe an incorrect path grouping on LUNs during LUN move on demand operation along with storage faults. During LUN move operation multipath path priorities will change and multipath is unable to reloads the device table due to device failure caused by storage fault. This leads to incorrect path grouping. 
 |===
+
+// 2024 SEP 2, ONTAPDOC-2345
