--- a/hu_rhel_76.adoc
+++ b/hu_rhel_76.adoc
@@ -120,13 +120,14 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 The RHEL 7.6 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
-| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host. | When you set the 'disable_changed_wwids' multipath configuration parameter to YES, it disables access to the path device in the event of a WWID change. Multipath will disable access to the path device until the WWID of the path is restored to the WWID of the multipath device. To learn more, see  link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^]. | N/A
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1186754[1186754^] | Remote ports status on RHEL7U6 with QLogic QLE2742 host might be in blocked during host discovery | During host discovery, FC remote port status on RHEL7U6 host with a QLogic QLE2742 adapter might enter a blocked state. These blocked remote ports might result in the paths to LUNs becoming unavailable. During storage failover, the path redundancy might be reduced and result in I/O outage. You can check the remote port status by entering the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state | link:https://bugzilla.redhat.com/show_bug.cgi?id=1628039[1628039^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1190698[1190698^] | Remote port status on RHEL7U6 with QLogic QLE2672 host might be in blocked during storage failover operations | FC remote ports might be blocked on Red Hat Enterprise Linux (RHEL) 7U6 with the QLogic QLE2672 host during storage failover operations. Because the logical interfaces go down when a storage node is down, the remote ports set the storage node status to blocked. When the storage node returns to its optimal state, the logical interfaces also come up and the remote ports should be online. However, the remote portsmight still be blocked. This blocked state registers as failed faulty to LUNS at the multipath layer. You can verify the remote ports state with the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state | link:https://bugzilla.redhat.com/show_bug.cgi?id=1643459[1643459^]
+| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host. | When you set the 'disable_changed_wwids' multipath configuration parameter to YES, it disables access to the path device in the event of a WWID change. Multipath will disable access to the path device until the WWID of the path is restored to the WWID of the multipath device. To learn more, see  link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^].
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1186754[1186754^] | Remote ports status on RHEL7U6 with QLogic QLE2742 host might be in blocked during host discovery | During host discovery, FC remote port status on RHEL7U6 host with a QLogic QLE2742 adapter might enter a blocked state. These blocked remote ports might result in the paths to LUNs becoming unavailable. During storage failover, the path redundancy might be reduced and result in I/O outage. You can check the remote port status by entering the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1190698[1190698^] | Remote port status on RHEL7U6 with QLogic QLE2672 host might be in blocked during storage failover operations | FC remote ports might be blocked on Red Hat Enterprise Linux (RHEL) 7U6 with the QLogic QLE2672 host during storage failover operations. Because the logical interfaces go down when a storage node is down, the remote ports set the storage node status to blocked. When the storage node returns to its optimal state, the logical interfaces also come up and the remote ports should be online. However, the remote portsmight still be blocked. This blocked state registers as failed faulty to LUNS at the multipath layer. You can verify the remote ports state with the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state 
 |===
+
+// 2024 SEP 2, ONTAPDOC-2345
