--- a/hu_rhel_80.adoc
+++ b/hu_rhel_80.adoc
@@ -125,17 +125,17 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 The RHEL 8.0 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1238719[1238719^] | Kernel disruption on RHEL8 with QLogic QLE2672 16GB FC during storage failover operations | Kernel disruption might occur during storage failover operations on a Red Hat Enterprise Linux (RHEL) 8 kernel with a QLogic QLE2672 host bus adapter (HBA). The kernel disruption causes the operating system to reboot. The reboot causes application disruption and generates the vmcore file under the /var/crash/directory if kdump is configured.  Use the vmcore file to identify the cause of the failure. In this case, the disruption is in the “kmem_cache_alloc+160” module. It is logged in the vmcore file with the following string:    "[exception RIP: kmem_cache_alloc+160]". Reboot the host OS to recover the operating system and then restart the application. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1710009[1710009^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1226783[1226783^] | RHEL8 OS boots up to "emergency mode" when more than 204 SCSI devices are mapped on all Fibre Channel (FC) host bus adapters (HBA) | If a host is mapped with more than 204 SCSI devices during an operating systemreboot process, the RHEL8 OS fails to boot up to "normal mode" and enters "emergency mode". This results in most of the host services becoming unavailable. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1690356[1690356^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1230882[1230882^] | Creating a partition on an iSCSI multipath device during the RHEL8 installation is not feasible. | iSCSI SAN LUN multipath devices are not listed in disk selection during RHEL 8 installation. Consequently, the multipath service is not enabled on the SAN boot device. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1709995[1709995^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1235998[1235998^] | The "rescan-scsi-bus.sh -a" command does not scan more than 328 devices | If a Red Hat Enterprise Linux 8 host maps with more than 328 SCSI devices, the host OS command "rescan-scsi-bus.sh -a" only scans 328 devices. The host does not discover any remaining mapped devices. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1709995[1709995^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231087[1231087^] | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB Fibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer | link:https://bugzilla.redhat.com/show_bug.cgi?id=1702005[1702005^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231098[1231098^] |Remote ports transit to blocked state on RHEL8 with Emulex LPe32002 32GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe32002 32GBFibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. | link:https://bugzilla.redhat.com/show_bug.cgi?id=1705573[1705573^]
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1238719[1238719^] | Kernel disruption on RHEL8 with QLogic QLE2672 16GB FC during storage failover operations | Kernel disruption might occur during storage failover operations on a Red Hat Enterprise Linux (RHEL) 8 kernel with a QLogic QLE2672 host bus adapter (HBA). The kernel disruption causes the operating system to reboot. The reboot causes application disruption and generates the vmcore file under the /var/crash/directory if kdump is configured.  Use the vmcore file to identify the cause of the failure. In this case, the disruption is in the “kmem_cache_alloc+160” module. It is logged in the vmcore file with the following string:    "[exception RIP: kmem_cache_alloc+160]". Reboot the host OS to recover the operating system and then restart the application.
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1226783[1226783^] | RHEL8 OS boots up to "emergency mode" when more than 204 SCSI devices are mapped on all Fibre Channel (FC) host bus adapters (HBA) | If a host is mapped with more than 204 SCSI devices during an operating systemreboot process, the RHEL8 OS fails to boot up to "normal mode" and enters "emergency mode". This results in most of the host services becoming unavailable. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1230882[1230882^] | Creating a partition on an iSCSI multipath device during the RHEL8 installation is not feasible. | iSCSI SAN LUN multipath devices are not listed in disk selection during RHEL 8 installation. Consequently, the multipath service is not enabled on the SAN boot device. 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1235998[1235998^] | The "rescan-scsi-bus.sh -a" command does not scan more than 328 devices | If a Red Hat Enterprise Linux 8 host maps with more than 328 SCSI devices, the host OS command "rescan-scsi-bus.sh -a" only scans 328 devices. The host does not discover any remaining mapped devices.
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231087[1231087^] | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB Fibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer 
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231098[1231098^] |Remote ports transit to blocked state on RHEL8 with Emulex LPe32002 32GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe32002 32GBFibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. 
 |===
 
+// 2024 SEP 2, ONTAPDOC-2345
