--- a/hu_rhel_91.adoc
+++ b/hu_rhel_91.adoc
@@ -141,10 +141,11 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 The RHEL 9.1 with ONTAP release has the following known issues:
 
-[options="header", cols="20, 20, 50,20"]
+[options="header", cols="20,40,40"]
 |===
-|NetApp Bug ID	|Title	|Description	|Bugzilla ID
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex HBA adapter discovery	|In RHEL 9.1, the NetApp Linux SAN host utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support HBA discovery cannot be found. |N/A
+|NetApp Bug ID	|Title	|Description
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex HBA adapter discovery	|In RHEL 9.1, the NetApp Linux SAN host utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support HBA discovery cannot be found. 
 
 |===
 
+// 2024 SEP 2, ONTAPDOC-2345
