--- a/hu_sles_12.adoc
+++ b/hu_sles_12.adoc
@@ -124,14 +124,15 @@ devices {
 
 The SLES 12 with ONTAP release has the following known issues:
 
-[cols=4*,options="header"]
+[cols=3*,options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=873555[873555^] | scsi_dh_alua module is not loaded during multipathd startup on local boot | scsi_dh_alua is a Linux ALUA device handler module. This is is not loaded during multipathd startup on local boot. Due to this device handler will not be loaded though ALUA is enabled on target side. | link:https://bugzilla.suse.com/show_bug.cgi?id=908529[908529^]
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=873555[873555^] | scsi_dh_alua module is not loaded during multipathd startup on local boot | scsi_dh_alua is a Linux ALUA device handler module. This is is not loaded during multipathd startup on local boot. Due to this device handler will not be loaded though ALUA is enabled on target side. 
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=863584[863584^] | The message "conflicting device node '/dev/mapper/360xx' found" appears on the screen when you create a DM device on SLES12 | You might observe a failure in creating a link to DM devices under /dev/mapper dir in SLES 12 and see the messages
-"conflicting device node '/dev/mapper/360xx' found". | link:https://bugzilla.suse.com/show_bug.cgi?id=903001[903001^]
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=847490[847490^] | Multipath daemon shows path failures on SLES 12 | You might observe path failures on the SLES12 multipath daemon during I/O with storage or fabric faults. | link:https://bugzilla.novell.com/show_bug.cgi?id=890854[890854^]
+"conflicting device node '/dev/mapper/360xx' found".
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=847490[847490^] | Multipath daemon shows path failures on SLES 12 | You might observe path failures on the SLES12 multipath daemon during I/O with storage or fabric faults. 
 |===
+
+// 2024 SEP 2, ONTAPDOC-2345
