--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -110,13 +110,12 @@ devices {
 
 The SLES 15 SP2 with ONTAP release has the following known issues:
 
-[cols="1,1,3,1"]
+[cols="1,3,3"]
 [options="header"]
 |===
 | NetApp Bug ID
 | Title
 | Description
-| Bugzilla ID
 
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1308744[1308744^]
 
@@ -135,7 +134,6 @@ reboot: System halted
 
 ----
 
-| link:https://bugzilla.suse.com/show_bug.cgi?id=1167494[1167494^]
-
 |===
 
+// 2024 SEP 2, ONTAPDOC-2345
