--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -424,16 +424,13 @@ NSID  UUID                                   Size
 
 The NVMe-oF host configuration for RHEL 8.7 with ONTAP has the following known issues:
 
-[cols="10,30,30,10",options="header"]
+[cols="20,40,40",options="header"]
 |===
-|NetApp Bug ID	|Title	|Description	|Bugzilla ID
+|NetApp Bug ID	|Title	|Description
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.7 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 8.7 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.|2087000
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.7 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 8.7 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
 
-
-
-
+// 2024 SEP 2, ONTAPDOC-2345
 // 2022,12-06, Jira IEOPS-690
-
 // JIRA-1289 20-Sep-2023
