--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -405,14 +405,13 @@ NSID UUID                                   Size
 
 The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
 
-[cols="10,30,30,10",options="header"]
+[cols="20,40,40",options="header"]
 |===
-|NetApp Bug ID	|Title	|Description	|Bugzilla ID
+|NetApp Bug ID	|Title	|Description
 |1503468
-|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace.  |2130106
+|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace. 
 |===
 
-
+// 2024 SEP 2, ONTAPDOC-2345
 // 2022,12-06, Jira IEOPS-690
-
 // JIRA-1289 20-Sep-2023
